--- a/index.html
+++ b/index.html
@@ -3,44 +3,44 @@
     <head>
         <meta charset="UTF-8">
         <title>Drum-Dum-Dum...!</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
         <link type="text/javascript" src="assets/js/game.js">    
     </head>
     <body>
         <div class="keys">
-            <div data-key="65" class="keys">
+            <div data-key="65" class="key">
                 <kbd>A</kbd>
                 <span class="sound">clap</span>
             </div>
-            <div data-key="83" class="keys">
+            <div data-key="83" class="key">
                 <kbd>S</kbd>
                 <span class="sound">hihat</span>
             </div>
-            <div data-key="68" class="keys">
+            <div data-key="68" class="key">
                 <kbd>D</kbd>
                 <span class="sound">kick</span>
             </div>
-            <div data-key="70" class="keys">
+            <div data-key="70" class="key">
                 <kbd>F</kbd>
                 <span class="sound">openhat</span>
             </div>
-            <div data-key="71" class="keys">
+            <div data-key="71" class="key">
                 <kbd>G</kbd>
                 <span class="sound">clap</span>
             </div>
-            <div data-key="72" class="keys">
+            <div data-key="72" class="key">
                 <kbd>H</kbd>
                 <span class="sound">clap</span>
             </div>
-            <div data-key="74" class="keys">
+            <div data-key="74" class="key">
                 <kbd>J</kbd>
                 <span class="sound">snare</span>
             </div>
-            <div data-key="75" class="keys">
+            <div data-key="75" class="key">
                 <kbd>K</kbd>
                 <span class="sound">tomp</span>
             </div>
-            <div data-key="76" class="keys">
+            <div data-key="76" class="key">
                 <kbd>l</kbd>
                 <span class="sound">tink</span>
              </div>
