--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1>Play A Beat!</h1>
         <!-- Keyboard -->
     <div class="keys">
         <div data-key="65" class="key">
